--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html  dir="ltr" lang="en" xml:lang="en">
 <head>
-    <title>SHSEXAM 2422(PSCS)</title>
+    <title>SHSEXAM by JOSH</title>
     <link rel="shortcut icon" href="http://shsexam.amaes.com/2422/theme/image.php/boost/theme/1739875074/favicon" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="moodle, SHSEXAM 2422(PSCS)" />
@@ -50,7 +50,7 @@ document.body.className += ' jsenabled';
             <a href="http://shsexam.amaes.com/2422" class="navbar-brand aabtn 
                     d-none d-sm-inline
                     ">
-                <span class="site-name d-none d-md-inline">SHSEXAM 2422(PSCS)</span>
+                <span class="site-name d-none d-md-inline">Pag answer namo</span>
             </a>
     
             <ul class="navbar-nav d-none d-md-flex">
